# mrotor-sfaults-control

./: README.md
aero_ctrl/: CMakeLists.txt  package.xml
aero_ctrl/config/: beb_pos_p.yaml  beb_pos_pd.yaml  beb_pos_smc.yaml  filt.yaml  traj_point.yaml  traj_point_snr.yaml
aero_ctrl/include/aero_ctrl/: beb_pos_ctrl.h  beb_pos_pid.h  beb_pos_smc.h  filter_ext.h
aero_ctrl/launch/: beb.launch  filt.launch  kbd_ctl.launch  kbd_p.launch  kbd_pd.launch  kbd_smc.launch  traj_gen.launch  vcn_beb.launch
aero_ctrl/msg/: Debug.msg  DebugFil.msg
aero_ctrl/scripts/: generate_trajectory.py
aero_ctrl/src/: beb_pos_ctrl.cpp  beb_pos_ctrl_node.cpp  beb_pos_pid.cpp  beb_pos_pid_node.cpp  beb_pos_smc.cpp  beb_pos_smc_node.cpp  filter_ext.cpp  filter_ext_node.cpp
simulation/: qr_vert_ctrl.slx  qr_vert_ctrl.slxc  vars.mat
